# strim

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile.base  LICENSE  README.md  docker-bake.hcl  up.sh
chart/: Chart.yaml  values.yaml
chart/templates/: _metrics-env.yaml  operator.yaml  strim.yaml
common/: Cargo.toml
common/src/: args.rs  cors.rs  lib.rs  metrics.rs  postgres.rs  redis.rs
crds/: strim.beebs.dev_strim_crd.yaml
operator/: Cargo.toml  Dockerfile  build.rs
operator/src/: main.rs
operator/src/strims/: actions.rs  reconcile.rs
operator/src/util/: colors.rs  messages.rs  mod.rs  patch.rs
peggy/: Cargo.toml  Dockerfile  run-ffmpeg-hls.sh  run-jumbotron.sh
peggy/src/: app.rs  args.rs  main.rs
scripts/: strim_values.yaml  upgrade_strim.sh
strim/: Cargo.toml  Dockerfile
strim/src/: args.rs  colors.rs  connection.rs  main.rs  server.rs
types/: Cargo.toml
types/src/: lib.rs
