[workspace]
members = [
    "common",
    "operator",
    "types",
    "peggy",
    "strim",
]
resolver = "3"

[workspace.dependencies]
owo-colors = { version = "4.2.3", features = ["supports-colors"] }
uuid = { version = "1.18.1", features = ["serde", "v4", "v8"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive", "env"] }
redis = { version = "0.32.7", default-features = false, features = [
    "acl",
    "script",
    "connection-manager",
    "tokio-comp",
    "tls-rustls",
    "tokio-rustls-comp",
    "tls-rustls-webpki-roots",
    "json",
] }
deadpool-redis = { version = "0.22.0", features = ["rt_tokio_1"] }
tokio-postgres-rustls = "0.13"
rustls-native-certs = "0.8"
tokio-postgres = { version = "0.7.14", features = [
    "with-chrono-0_4",
    "with-serde_json-1",
    "with-uuid-1",
] }
postgres = { version = "0.19.11", features = [
    "with-chrono-0_4",
    "with-serde_json-1",
    "with-uuid-1",
] }
deadpool-postgres = { version = "0.14.1", features = ["serde"] }
postgres-types = { version = "0.2.10", features = ["derive"] }
aws-config = { version = "1.8", features = ["rt-tokio", "rustls"] }
aws-sdk-s3 = { version = "1.106", features = ["rustls"] }
aws-types = "1.3.9"
aws-smithy-types = "1.3.3"
aws-smithy-http = "0.62.4"
aws-smithy-runtime-api = "1.9.1"
async-trait = "0.1.89"
metrics = "0.24.2"
metrics-exporter-prometheus = "0.17.2"
axum = { version = "0.8.4", features = [
    "query",
    "json",
    "macros",
    "tokio",
    "ws",
] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors"] }
http = "1.3.1"
futures = "0.3.31"
futures-util = "0.3.31"
tokio-stream = "0.1.17"
rand = "0.9.2"
tempfile = "3.23.0"
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "json",
    "http2",
    "stream",
] }
base64 = "0.22.1"
sha2 = "0.10.9"
tokio-util = { version = "0.7", features = ["io", "rt"] }
http-body-util = "0.1.3"
bytes = "1.10.1"
keycloak = "26.3.202"
async-nats = "0.42.0"
axum-keycloak-auth = "0.8.3"
base64-url = "3.0.0"
chrono = "0.4.42"
percent-encoding = "2.3.2"
rustls = { version = "0.23", default-features = false, features = [
    "std",
    "aws-lc-rs",
] }
humantime = "2.3.0"
