[package]
name = "strim-operator"
version = "0.1.0"
edition = "2024"

[dependencies]
strim-common = { path = "../common" }
strim-types = { path = "../types" }
serde = "1"
serde_json = "1.0"
kube = { version = "2.0.1", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.26.0", default-features = true, features = [
    "latest",
    "schemars",
] }
schemars = { version = "1" }
clap = { workspace = true }
owo-colors = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
futures = "0.3"
thiserror = "1"
chrono = "0.4.23"
json-patch = "4.1.0"
prometheus = { version = "0.13", optional = true }
hyper = { version = "^0.14", features = ["server", "http1", "tcp"] }
lazy_static = "^1.4"
const_format = "0.2.30"
uuid = { version = "1.3.0", features = ["v4"] }
parse_duration = "2.1.1"
kube-leader-election = "0.42.0"
tokio-util = { workspace = true }

[build-dependencies]
serde_yaml = "0.9"
strim-types = { path = "../types" }
kube = { version = "2.0.1", default-features = true, features = ["derive"] }

[features]
default = ["metrics"]        # Enable metrics by default
metrics = ["dep:prometheus"] # metrics feature requires prometheus crate
