[package]
name = "strim"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "strim"
path = "src/main.rs"

[dependencies]
strim-common = { path = "../common" }
strim-types = { path = "../types" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
http = { workspace = true }
uuid = { workspace = true }
owo-colors = { workspace = true }
reqwest = { workspace = true }
deadpool-redis = { workspace = true }
redis = { workspace = true }
base64 = { workspace = true }
mio = "0.6.23"
slab = "0.4.2"
bytes = "1"
rml_rtmp = "0.8.0"
kube = { version = "2.0.1", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.26.0", features = ["latest", "schemars"] }
schemars = { version = "1" }
sha2 = { workspace = true }
tokio-util = { workspace = true }
rand.workspace = true

[build-dependencies]
tonic-build = "0.12"
protoc-bin-vendored = "3"
